--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -784,7 +784,7 @@ Each witness can be compiled using one release of a crate,
 but results in a compilation error for the other release.
 Moreover, for each result we have examined its source code to confirm
 that it is part of the public API accessible by the user and not marked \texttt{\#[doc(hidden)]}. Thus, we are confident that each
-result is a semver violation that is a true-positive.
+result is a true-positive report pointing out a real semver violation.
 
 The following table shows for each lint how often it was triggered:
 
