--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -907,7 +907,7 @@ broke semver and two manifests that only differ in the \texttt{[dependency]} sec
 (they have the same crate name as a dependency, but two different releases of it).
 
 The output of each lint in cargo-semver-checks contains a list of importable paths
-of items that it was triggered by, which is enough to construct some of the witnesses automatically.
+of items that it was triggered by, which is enough to construct many of the witnesses automatically.
 
 For example, after parsing the output of the \texttt{enum\_variant\_missing} lint,
 we got the importable path of the enum and the name of its variant that was removed.
