--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -841,7 +841,7 @@ The remaining results (`cargo-semver-checks` false-positive reports and bugs) ar
 Because cargo-semver-checks is able to create a rustdoc JSON file
 of a particular crate and release from the registry,
 we thought of running the tool on a large number of existing crates
-to find semver violations and bugs (which mostly are false-positives or crashes).
+to find semver violations and bugs such as false-positives or crashes.
 We developed a tool for this purpose and called it \texttt{semver-crater}
 (similarly to \texttt{crater} which is used by the Rust team to check
 new compilator versions on a large number of crates).
