--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -842,9 +842,9 @@ Because cargo-semver-checks is able to create a rustdoc JSON file
 of a particular crate and release from the registry,
 we thought of running the tool on a large number of existing crates
 to find semver violations and bugs such as false-positives or crashes.
-We developed a tool for this purpose and called it \texttt{semver-crater}
-(similarly to \texttt{crater} which is used by the Rust team to check
-new compilator versions on a large number of crates).
+We developed a tool for this purpose and called it \texttt{semver-crater},
+analogously to \texttt{crater} which is used by the Rust team to check
+new compiler versions on a large number of crates.
 
 It fetches a list of one thousand crates available on crates.io, sorted by the number of
 all-time downloads (thus, they are often the biggest crates and libraries
