--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -846,7 +846,7 @@ We developed a tool for this purpose and called it \texttt{semver-crater},
 analogously to \texttt{crater} which is used by the Rust team to check
 new compiler versions on a large number of crates.
 
-It fetches a list of one thousand crates available on crates.io, sorted by the number of
+It fetches a list of one thousand crates available on crates.io sorted by the number of
 all-time downloads (thus, they are often the biggest crates and libraries
 that strictly adhere to semantic versioning). For each crate,
 it then retrieves the available releases which were not yanked
