--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -860,7 +860,7 @@ that are to be fixed. However, most of them were caused by one of the two cases:
 		which hides it from the documentation and thus is not part
 		of the public API accessible by the user
 		(\texttt{\#[doc(hidden)]} is most often used by macros to hide their generated code
-		as it is irrevelant for the user),
+		as it is not meant to be used directly by the user),
 	\item an item was moved to another crate and re-exported
 		(thus the item is still accessible with the old path,
 		but its definition is in another rustdoc JSON file making it not visible to cargo-semver-checks).
