--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -936,7 +936,7 @@ Thus we decided that we would skip checking some of the reports that required us
 
 For some lints we could choose between simply importing the given item
 (e.g. by \texttt{use importable\_path;}) or creating a source code that uses it.
-Since just importing the item can be seen as not convincing and not visually appealing (it does not use any item properties,
+Just importing the item can be seen as not convincing and not visually appealing (it does not use any item properties,
 e.g. it uses the function name but does not call the function itself).
 Thus, we decided to generate witnesses with the more convincing technique of writing the more realistic Rust code whenever possible
 and used the pure imports as a fallback when it failed to compile.
