--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -885,7 +885,8 @@ We came up with two solutions:
 
 Those two techniques greatly reduced the number of reports.
 To be sure that the remaining items were true-positives,
-we manually checked the code (we managed to generate links to the line of code where each item was defined).
+we manually checked the code by first generating links to the line of code where each item was defined
+and then reading the file.
 Mostly we verified whether an item was indeed a part of the public API
 (not \say{doc-hidden} and not a part of a test module).
 With that, we have high confidence that the found items are indeed true-positives.
