--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -851,7 +851,8 @@ all-time downloads, which often are the biggest crates and Rust libraries
 that strictly adhere to semantic versioning. For each crate,
 it then retrieves the available releases which were not yanked
 and compares every two adjacent, non-yanked releases and parses the output.
-The results (which take several days to generate) are saved to a CSV file.
+The results are saved to a CSV file.
+Because of the sheer number of releases that needs to be checked, the results take several days to generate.
 
 Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces false-positives
 that are to be fixed. However, most of them were caused by one of the two cases:
