--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1028,7 +1028,7 @@ the project's downloads. Originally a repository using cargo-semver-checks would
 download the same version multiple times. For example, every time a CI run took place the tool
 would be downloaded from crates.io and built locally from scratch. This resulted in a big variation
 of downloads per release, depending on factors such as how long it has been since the most
-recent one. However, with pre-builds now available, more and more projects
+recent one. However, with pre-built binaries now available, more and more projects
 decide to get them directly from the GitHub repository for CI usage
 rather than download the tool from crates.io.
 This has lowered
