users -> maintainers (when possible)

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -993,8 +993,8 @@ Rust developers, but this is not the case for less popular ones -- with their de
 less expertise and poorer semver knowledge, they are even more vulnerable to cause breaks.
 
 After all of our contributions, the tool's ultimate goal of becoming a built-in feature of cargo
-seems closer than it has ever been before. More and more users decide to add the tool to their
-production processes. Moreover, it is not only the packages' maintainers, but also all of
+seems closer than it has ever been before. More and more maintainers decide to add the tool
+to their production processes. Moreover, it is not only them, but also all of
 the packages' dependents who benefit from the tool's presence in the crate's repository. Thus its
 actual impact and the group of beneficiaries are much greater than the number of repositories
 using it may suggest.
@@ -1061,7 +1061,7 @@ resulted in the tool's undoubtful success:
 \end{itemize}
 
 Sometimes the feedback we received from the tool's users was not just limited to a single comment
--- there were cases where after our response users would share some useful
+-- there were cases where after our response they would share some useful
 knowledge or even help with implementing the features they initially asked for. A great example
 comes from a user who was just wondering whether we could do something to make the tool run faster
 in continuous integration \cite{make-ci-runs-faster}. Shortly after learning more about our active
