--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1070,11 +1070,13 @@ in cargo-semver-checks usage as it was growing to its current, well-estabilished
 the Rust ecosystem. Given its wide and enthusiastic adoption by both corporate and hobbyist
 projects, and the high frequency of accidental semantic versioning violations when it is not
 in use, the tool's ultimate goal of becoming a built-in feature of cargo seems closer than it has
-ever been before. Moreover, it is not only the packages' maintainers, but also all of the
-dependents who benefit from the tool's presence. Thus its actual impact and the group of
-beneficiaries are even greater than the numbers may suggest. With that, we firmly believe that
-its future is bright and are happy to already see it making such an impact, hoping to soon allow
-everyone to be fearless about running \texttt{cargo update} on their projects.
+ever been before.
+
+Moreover, it is not only the packages' maintainers, but also all of the dependents who benefit
+from the tool's presence. Thus its actual impact and the group of beneficiaries are even greater
+than the numbers may suggest. With that, we firmly believe that its future is bright and are happy
+to already see it making such an impact, hoping to soon allow everyone to be fearless about running
+\texttt{cargo update} on their projects.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %            Bibliography             %
