Smoother transition into numbers

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1003,7 +1003,8 @@ cargo-semver-checks into other systems -- the tool is available in nixOS and has
 into release managers like release-plz. With those and many more usage scenarios,
 cargo-semver-checks has proven its versatility in the vast, diverse world of semantic versioning.
 
-The Rust community has shown great interest in using the tool -- as of May 2023,
+However, cargo-semver-checks is not only used by the large, popular and complex projects.
+The entire Rust community has shown great interest in using the tool as well -- as of May 2023,
 cargo-semver-checks has over 63 000 downloads from the crates.io registry \cite{downloads-total}.
 This number can be split down into three components:
 \begin{itemize}
