--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -784,7 +784,31 @@ making it more future-proof at the same time.
 
 \section{Command-line interface improvements}\label{r:section_cli}
 
-<Here write a list about changes that made the command line interface better>
+The main change which we implemented was adding the ability to specify 
+features that a crate should be built with for the checks. It is also
+possible to use different configuration for the current and baseline version.
+This is important because some functionalities may change between features. What is more,
+crates often have a feature that breaks semver by design, which
+we discovered when working on the semver-crater \ref{r:section_results_semver_crater}.
+Now the users can adjust the set of features for their specific use cases.
+
+The new default behaviour is to include all the features,
+filtering out heuristically the ones that break semver by looking at
+the feature's name. For example, a feature named {\ttfamily unstable} would not be
+included. The list of banned names was created by looking
+at different features in popular crates.
+
+It was not easy to correctly handle all edge cases,
+thus we wrote a heavy test suite for this change.
+For example, one of the optimizations written in cargo-semver-checks
+is caching the generated rustdoc and we had to make sure that 
+the caching mechanism is not used when a user changes the enabled features
+(which might change the rustdoc).
+
+We also improved the user experience by spotting and fixing a couple bugs
+in the command-line interface -- both in the tool's behaviour
+in combination with specific flags and in its output messages.
+For details, see section \ref{r:section_bugfixes}.
 
 \section{Brand new GitHub Action}\label{r:section_github_action}
 
