Adjust theory picture

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -657,12 +657,12 @@ a crate. They contain elements such as:
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{lint-query-example.png}
+	\includegraphics[width=0.975\linewidth]{lint-query-example.png}
 	\caption{The \texttt{enum\_missing} lint's query}
 	\label{fig:enum_missing_lint_query}
 \end{figure}
 
-The query above is part of the lint seen in figure \ref{fig:enum_missing_lint}.
+The presented query is part of the lint seen in figure \ref{fig:enum_missing_lint}.
 During its execution, Trustfall successively:
 \begin{itemize}
 	\item collects all of the baseline crate's public Enums, tagging their paths,
