--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -107,9 +107,9 @@ problems with semantic versioning less frequent in the Rust community. The exact
 project are described in chapter \ref{r:chapter_vision}.
 
 The project is open-source -- all of the authors' work is visible in public repositories (listed in
-\ref{r:section_projectstructure}). The project existed before their contributions, thus chapter
+\ref{r:section_project_structure}). The project existed before their contributions, thus chapter
 \ref{r:chapter_implementation} mainly describes how they have extended the project's
-functionalities and fixed its issues. Chapter \ref{r:chapter_evaluation} is a summary of their
+functionalities and fixed its issues. Chapter \ref{r:chapter_conclusion} is a summary of their
 results and the project's impact on the Rust community.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -378,7 +378,7 @@ Some of popular Rust crates with millions of downloads happened to break semver:
     \item multiple {\ttfamily block-buffer} versions accidentally broke their MSRV contract
 		\cite{block-buffer-issue}
     \item and many more. We have developed a script that scans all releases for semver breaks we
-		can detect. The results are covered in section \ref{r:section_script_evaluation}
+		can detect. The results are covered in section \ref{r:section_results_statistics}
 \end{itemize}
 
 Those were examples of popular crates with experienced maintainers, but the problem is even more
